--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "component-anatomy",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.0",
+  "description": "Identify parts of a figure",
   "main": "src/index.js",
-  "type": "module",
   "browser": "dist/index.iife.js",
+  "unpkg": "dist/index.iife.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rollup src/index.js --file dist/index.iife.js --format iife -p html -p 'postcss={ inject: false }' -p terser",
-    "dev": "watch-exec -w src/ -c 'npm run build'"
+    "dev": "watch-exec -w src/ -c 'npm run build'",
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ddamato/component-anatomy.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "web-component",
+    "anatomy"
+  ],
+  "author": "Donnie D'Amato <fauxserious@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ddamato/component-anatomy/issues"
   },
   "homepage": "https://github.com/ddamato/component-anatomy#readme",
   "devDependencies": {
+    "auto-changelog": "^2.3.0",
     "rollup": "^2.56.3",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-postcss": "^4.0.1",
