--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/ddamato/component-anatomy/issues"
   },
-  "homepage": "https://github.com/ddamato/component-anatomy#readme",
+  "homepage": "https://ddamato.github.io/component-anatomy",
   "devDependencies": {
     "auto-changelog": "^2.3.0",
     "rollup": "^2.56.3",
