--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "rollup src/index.js --file dist/index.iife.js --format iife -p html -p 'postcss={ inject: false }' -p terser",
     "dev": "watch-exec -w src/ -c 'npm run build'",
+    "test": "npm run build && mocha",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "repository": {
@@ -29,6 +30,9 @@
   "homepage": "https://ddamato.github.io/component-anatomy",
   "devDependencies": {
     "auto-changelog": "^2.3.0",
+    "chai": "^4.3.4",
+    "jsdom": "^17.0.0",
+    "mocha": "^9.1.1",
     "rollup": "^2.56.3",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-postcss": "^4.0.1",
